# LabTube

./: .env.sample  .gitignore  README.md  frame_layout.txt  pyproject.toml  requirements.txt
.cursor/rules/: git-push-policy.mdc
docs/: DATA_ANALYSIS_REPORT.md  EICU_DATA_ANALYSIS_REPORT.md  PREPROCESSING_PLAN.md  RUN_ON_GOOGLE_CLOUD.md  SUBSET_ANALYSIS.md  TRAINING_PLAN.md  VIDEO_CONSTRUCTION_REPORT.md
lab_videos_normalized/: grid_layout.json  norm_stats.json  video_metadata.json
notebooks/: temporal_embedding_probe.ipynb
scripts/: README.md  admission_plots.py  admission_stats.py  admission_to_video.py  build_specimen_npy.py  config.py  csv_to_parquet.py  download_raw_data.py  inspect_lab_images.py  inspect_specimen.py  lab_grid.py  lab_with_admissions.py  labtube_train.py  normalize_videos.py  pack_videos_npz.py  pipeline_stats.py  run_pipeline.py  show_grid_layout.py  specimen_to_image.py  subset_analysis.py  top_admissions.py  visualize_videos.py
scripts/eicu/: admission_plots.py  admission_stats.py  admission_to_video.py  config.py  schema_utils.py
scripts/sql/: eicu_lab_events_with_adm.sql  eicu_vocab_labs.sql  mimiciv_all_admissions.sql  mimiciv_lab_events.sql  mimiciv_vocab_labs.sql
