[project]
name = "latte"
version = "0.1.0"
description = "MIMIC-IV labevents to (lab_type, lab_value) grid images"
readme = "scripts/README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.9.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.10.8",
    "tqdm>=4.65.0",
    "polars>=0.19.0",
    "google-cloud-bigquery>=3.40.1",
    "python-dotenv>=1.2.1",
    "db-dtypes>=1.5.0",
    "pyarrow>=16.1.0",
    "google-cloud-bigquery-storage>=2.36.2",
]
